# Python-Kafka-Messaging

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
src/: consumer.py  main.py  producer.py
tests/: test_main.py
