
[metadata]
name = python-kafka
description = A sample project for message passing with kafka
author = samora
license = GNU
license_file = LICENSE
platform = unix, linux, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    
[options]
packages = src
install_requires = 
    requests>=2
python_requires = >=3.*
zip_safe = no
    
